# dumb-mcp-multiplexer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  DumbMcpMultiplexer.slnx  PLAN.md  STDIO-PLAN.md  compose.yml  package-lock.json  package.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml
DumbMcpMultiplexer/: DumbMcpMultiplexer.csproj  Program.cs  appsettings.json
DumbMcpMultiplexer.Client/: _Imports.razor
DumbMcpMultiplexer/Components/: App.razor  _Imports.razor
DumbMcpMultiplexer/Data/: AppDbContext.cs  SkillArgumentsComparer.cs  SkillArgumentsConverter.cs
DumbMcpMultiplexer/Middleware/: ApiKeyMiddleware.cs  HostGuardMiddleware.cs  McpCorsMiddleware.cs
DumbMcpMultiplexer/Migrations/: 20260528172531_InitialCreate.Designer.cs  20260528172531_InitialCreate.cs  20260528225609_AddToolCapabilityEnabled.Designer.cs  20260528225609_AddToolCapabilityEnabled.cs  20260529224500_AddContainerServerFields.cs  20260530000000_AddPackageRunnerFields.cs  20260530000100_RemoveContainerRuntimeAndPackages.cs  20260530222939_AddDataProtectionKeys.Designer.cs  20260530222939_AddDataProtectionKeys.cs  20260531005002_AddProfiles.Designer.cs  20260531005002_AddProfiles.cs  20260601000000_AddCodeModeToProfile.cs  20260601000100_AddToonModeToProfile.cs  20260602000000_RepairProfileColumns.cs  20260602044750_AddProfileCodeMode.Designer.cs  20260602044750_AddProfileCodeMode.cs  20260602135013_AddSkills.Designer.cs  20260602135013_AddSkills.cs  20260603031500_AddSkillArguments.cs  20260603031834_AddSkillArguments.Designer.cs  20260603031834_AddSkillArguments.cs  20260603131518_FixSkillArgumentsDefault.Designer.cs  20260603131518_FixSkillArgumentsDefault.cs  AppDbContextModelSnapshot.cs
DumbMcpMultiplexer/Models/: AppSetting.cs  McpServer.cs  Profile.cs  ProfileCapability.cs  ProfileServer.cs  ServerCapability.cs  Skill.cs  SkillArgument.cs
DumbMcpMultiplexer/Properties/: launchSettings.json
DumbMcpMultiplexer/Services/: CodeModeService.cs  CommandTokenizer.cs  ContainerService.cs  ContainerStdioTransport.cs  DiscoveredToolsTracker.cs  ImageBuilderService.cs  JsonSchemaSanitizer.cs  Namespace.cs  (+9 more)
_legacy-rust/: .dockerignore  Cargo.toml  Dockerfile  compose.yml
migrations/: 20250526000000_initial.sql
public/: manifest.json
quadlet/: dumb-mcp-multiplexer.container  dumb-mcp-runner-cache.volume
src/: app.rs  main.rs  types.rs
(+29 files in other folders)
