[package]
name = "dumb-mcp-multiplexer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Server-only dependencies
axum = { version = "0.8", features = ["macros"], optional = true }
leptos_axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
dashmap = { version = "6", optional = true }
rmcp = { version = "1.7", features = [
    "server",
    "transport-streamable-http-server",
    "tower",
    "client",
    "transport-streamable-http-client-reqwest",
], optional = true }
reqwest = { version = "0.13", features = ["rustls"], optional = true }

# Client-only dependencies
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:uuid",
    "dep:dashmap",
    "dep:rmcp",
    "dep:reqwest",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "dumb-mcp-multiplexer"
site-root = "target/site"
hash-files = true
site-pkg-dir = "pkg"
style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.css"
assets-dir = "public"
site-addr = "127.0.0.1:7899"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
